null.test, null.result:   Added test case for bug #4256. join_outer.result:   Fixed bug #4256. item_cmpfunc.h:   Fixed inconsistency of values of used_tables_cache and   const_item_cache for Item_func_isnull objects.   This inconsistency caused bug #4256.